--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -60,8 +60,12 @@ jobs:
       - name: Run pylint
         run: pylint --rcfile=pyproject.toml *.py
 
+      # ID: 70612
+      #   Package: Jinja2
+      #   Has been disputed by the maintainer and multiple third parties.
+      #   For more information see: https://github.com/advisories/GHSA-f6pv-j8mr-w6rr
       - name: Run safety
-        run: pip freeze | safety check --stdin
+        run: pip freeze | safety check --stdin --ignore=70612
 
   validator_regular:
     runs-on: ubuntu-latest
